<?xml version="1.0" encoding="utf-8"?>

<LinearLayout
xmlns:android="http://schemas.android.com/apk/res/android"
xmlns:app="http://schemas.android.com/apk/res-auto"
xmlns:tools="http://schemas.android.com/tools"
android:layout_width="match_parent"
android:layout_height="match_parent"
    tools:context=".MainActivity"
    tools:visibility="visible"
android:orientation="vertical">

<LinearLayout
    android:id="@+id/linear1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="8dp"
    android:background="#000000"
    android:orientation="horizontal">
    <LinearLayout
        android:id="@+id/linear2"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:padding="8dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/switchText"
            android:padding="8dp"
            android:textColor="#00BCD4"
            android:textSize="18sp">
        </TextView>

        <ToggleButton
            android:id="@+id/multiSaveSwitch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:padding="8dp" />

        <TextView
            android:id="@+id/multiSaveInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/multiSaveInfo"
            android:textSize="18sp"
            android:textColor="#2196F3" />

        <TextView
            android:id="@+id/oldAndroidInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/oldAndroidInfo"
            android:textSize="18sp"
            android:textColor="#2196F3"
            android:visibility="gone"/>

        <TextView
            android:id="@+id/veryOldAndroidInfo"
            android:layout_width="wrap_content"
            android:layout_height="48dp"
            android:textColor="#673AB7"
            android:text="@string/very_old_android_info"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/directorySaveFiles"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/directory_to_save_files"
            android:importantForAutofill="no"
            android:inputType="textNoSuggestions"
            android:minHeight="48dp"
            android:textColor="#673AB7"
            android:textColorHint="#673AB7"
            android:visibility="gone"/>

        <Button
            android:id="@+id/saveDirectorySetting"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:text="@string/save_dir_setting"
            android:visibility="gone" />

        <TextView
            android:id="@+id/errorField"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:textColor="#673AB7"
            android:textIsSelectable="true"
            android:visibility="gone"/>

    </LinearLayout>
</LinearLayout>
</LinearLayout>
